
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2021 JAN 18a
  * in config/config.c
    - in output_makefileheader() added -rdynamic flag when using debugging symbols and gcc or mpicc
  * in lib/exm/exm.c
    - added output_backtrace() when linux is defined
  * in lib/gridg/*.h and src/common.h
    - removed the include assert.h
  * in lib/soap/soap.c
    - removed the include assert.h
    - added the include exm.h
  * in src/common.c
    - removed backtrace() function
  * in src/control.c
    - in find_metrics_on_all_nodes(), fixed a bug: the metrics at the interface were not properly
      stored in RAM for all interfaces with MPI, and this lead to the current density not being 
      determined properly on some nodes when using MPI. Note that this bug only occurred when using
      MPI and using a emfield module other than none.
      

2021 JAN 16a
  * in cycle/share/cycle_share.c
    - in update_linked_nodes(), fixed a bug: _al(gl,i,j,k) should be _ai(gl,i,j,k)
  * in cycle/tsemf/_AF/tsemf.c
    - replaced in a few locations _al(gl,l,dim,+0) by l
    - added assert(dim<nd) in a few locations
  * in model/chem/_Cs_Air_Plasma_11s/chem.c
    - added option  CESIUMIONIZATIONMODEL within write_model_chem_template(),
      read_model_chem_actions(), add_dW_dx_Cesium(), add_W_Cesium(): now the ionization due to
      electron impact (and its backward reaction) can be set to either Lenard (1964) 
      or Andrienko (2021)
  * in model/chem/_Cs_Air_Plasma_11s/doc/report.tex
    - added the Andrienko (2021) cesium ionization and recombination reactions
  * in model/fluid/_Navier-Stokes_plasma/fluid.c
    - in read_model_fluid_actions(), changed "1" for TEMODEL_CONSTANT, "2" for TEMODEL_TEQUILIBRIUM,
      etc