@@ -88,7 +88,8 @@ J. THERMOPHYSICS VOL. 5, page 266, 1991.}
 
 
 
-mf=2;
+
+mf=1;
 
 
 is=1;  
@@ -105,13 +106,13 @@ if (mod(im3-im2,2)==0,
 
 js=1;
 jm=round(100*mf/2);
-je=round(130*mf/2);
+je=round(180*mf/2);
 
 
 Rin=0.1524;
 Rout=0.4;
 Rbow=Rin+0.035;
-Rbowstag=Rin+0.03;
+Rbowstag=Rin+0.01;
 Routstag=0.3;
 H=0.9;
 Lplate=1.15;
@@ -125,6 +126,37 @@ dywall=70e-6/mf;
 
 
 dtheta=0.1/180*pi;
+
+
+
+
+
+CASE=1;
+
+if (CASE==1,
+    Minf=23.9;
+    Re=1.95e4/Rin;
+    {altitude: 61 km}
+);
+
+if (CASE==2,
+    Minf=25.9;
+    Re=6.28e3/Rin;
+    {altitude: 71 km}
+);
+   
+if (CASE==3,
+    Minf=28.3;
+    Re=1.59e3/Rin;
+    {altitude: 81 km}
+);
+
+T=7650^2/(1.4*286*Minf^2);
+Tv=T;
+Te=T;
+
+{Note: alt{km}=2.34-7.09*ln(rho{kg/m3});}
+
 
 
 
@@ -259,6 +291,64 @@ Bdry(
     Link(i1,j1,  i2,j2);
     }
   );
+  NavierStokesPlasma(
+    {
+    _________________________________________________________________________________________
+
+    Boundary Condition Type            ID   Description
+    _________________________________________________________________________________________
+
+    BDRY_INFLOWSUPERSONIC              0    Inflow, supersonic, 1o
+    BDRY_INFLOWSUBSONIC1               7    Inflow, subsonic, Tstag, Pstag fixed, 1o
+    BDRY_INFLOWSUBSONICMASSFLOWFIXED1  g    Inflow, subsonic, Pstag, Massflow/Area fixed, 1o
+    BDRY_OUTFLOWSUPERSONIC1            1    Outflow, supersonic, 1o
+    BDRY_OUTFLOWSUPERSONIC2            2    Outflow, supersonic, 2o
+    BDRY_OUTFLOWSUBSONIC1              4    Outflow, subsonic, P fixed, 1o
+    BDRY_OUTFLOWSUBSONICMFIXED1        f    Outflow, subsonic, M fixed, 1o
+    BDRY_SYMMETRICAL2                  e    Symmetrical, 2o
+    BDRY_SYMMETRICAL1                  9    Symmetrical, 1o
+    BDRY_WALLTFIXED1                   3    Wall, T specified, param Twall
+    BDRY_WALLADIABATIC1                6    Wall, Adiabatic
+    BDRY_SLIPWALL1                     c    Slip wall, Adiabatic, 1o
+    BDRY_FREESTREAM1                   5    Freestream, 1o, params Vx,Vy, P, T
+    _________________________________________________________________________________________
+    }
+    All(BDRY_WALLTFIXED1);
+    Plane("i",is,BDRY_OUTFLOWSUPERSONIC1);
+    Plane("i",ie,BDRY_OUTFLOWSUPERSONIC1);
+    Twall=1000.0; {K}
+    Plane("j",js,BDRY_WALLTFIXED1,Twall);
+    Plane("j",je,BDRY_INFLOWSUPERSONIC,Twall);
+    Region(is,js,  im1,js,  BDRY_SLIPWALL1);
+    Region(im4,js,  ie,js,  BDRY_SLIPWALL1);
+    {
+    Cut(is,js,  ie,je);
+    Region(is,js,  ie,je,  BDRY_INFLOWSUPERSONIC);
+    Link(i1,j1,  i2,j2);
+    }
+  );
+  Epotential(
+    {
+    _________________________________________________________________________________________
+
+    EMField Bdry Condition Type   ID   Description
+    _________________________________________________________________________________________
+
+    BDRYEMF_ELECTRODE             0    Electrode, phi fixed
+    BDRYEMF_DIELECTRIC            2    Dielectric, no conduction current through
+    BDRYEMF_EXTRAPOLATED1         1    Extrapolated, similar to outflow
+    _________________________________________________________________________________________
+
+    }
+    All(BDRYEMF_DIELECTRIC);
+    {
+    Faces(BDRYEMF_ELECTRODE,BDRYEMF_ELECTRODE,  BDRYEMF_DIELECTRIC,BDRYEMF_DIELECTRIC);
+    Cut(is,js,  ie,je);
+    Region(is,js,  ie,je,  BDRYEMF_ELECTRODE);
+    Link(i1,j1,  i2,j2);
+    }
+  );
+
 );
  
  
@@ -295,17 +385,41 @@ Model(
     wmin=1.0e-50;
     AXISYMMETRIC=YES;
   );
+  NavierStokesPlasma(
+    TEMODEL=TEMODEL_TVEQUILIBRIUM;
+    TETRANSPORT_WEEE_TWOTEMPERATURE=FALSE;
+    N2VIBMODEL=N2VIBMODEL_MACHERET;
+    N2VIBJOULEHEATING=YES;
+    REACTING=YES;
+    emfieldworkheatfact=0.0;   {factor multiplying the emfield work and heat source terms}
+    sigmadiv=1e-10; {S/m}
+    etdiv=1e-1;     {J/kg}
+    Pmin=1.0e-2;    Pmax=9.9e99;   {Pa}
+    Tmin=1.0e1;     Tmax=35.0e3;    {K}
+    Tvmin=Tmin;     Tvmax=Tmax;  {K}
+    Temin=240;     Temax=60.0e3;  {K}
+    Twmin=Tmin;     Twmax=Tmax;    {K}
+    wmin=1.0e-50;                  {min mass fraction allowed in the domain for neutrals}
+    chiimin=1e-30;  chiimax=1.0;    {min and max ion molar fraction}
+    chiemin=1e-20;  chiemax=1.0;    {min and max electron molar fraction}
+    Nminbdry=1e8;   {the minimum number density in 1/m3 for the charged species at the bdry nodes}
+    gamma=0.1e0;    {secondary emission coefficient}
+    AXISYMMETRIC=NO;
+  );
   AirPlasma11s(
-    CHEMMODEL=CHEMMODEL_BOYD2007;
+    CHEMMODEL=CHEMMODEL_DUNNKANG1973;
     TOWNSENDIONIZATION=FALSE; {include reactions function of EoverN}
     TOWNSENDIONIZATIONIMPLICIT=FALSE; {keep this to FALSE even if TOWNSENDIONIZATION=TRUE}
   );
-  CsAirPlasma15s(
-    CHEMMODEL=CHEMMODEL_LENARD1964;
-    CESIUMREACTIONS=FALSE; {include reactions function of Cs}
-    NEGATIVEIONREACTIONS=TRUE; {include reactions function of O- and O2-}
-    TOWNSENDIONIZATION=FALSE; {include reactions function of EoverN}
-    TOWNSENDIONIZATIONIMPLICIT=FALSE; {keep this to FALSE even if TOWNSENDIONIZATION=TRUE}
+  Epotential(
+    Te_buffer=300.0;    {"buffer" electron temp. in K needed when determining mue: Te=max(Te,Te_buffer);  
+                       needed to prevent convergence hangs where |E| becomes close to 0;
+                       set to as little a value as possible but at least as high as 300 K}
+    Jmax=200000.0;     {the maximum current density in A/m2 expected in the domain; this will affect only
+                       the Townsend ionization rates; make sure Jmax > sigma*Emag in the converged solution.}
+    SetRelativePermittivity(is,js, ie,je, 1.0 );
+    SetSolidConductivity(is,js, ie,je, 0.0 {S/m});
+    SetElectroMotiveForce(is,js, ie,je, 0.0{V/m},0.0{V/m}, 1e99{max power in W/m3});
   );
 );
 
@@ -333,16 +447,9 @@ Init(
     w_O2=0.235;
     w_N2=0.765;
     w_default=1e-30;
-    T=247;
-    Tv=T;
     k=1e-6;
     psi=1000;
-    {case 1}
-    Minf=23.9;
-    Re=1.95e4/Rin;
-    {case 3}
-    {Minf=28.3;
-    Re=1.59e3/Rin;}
+
     All(INIT_TYPE3,Minf,0,Re,T,w_O2,w_N2,w_default,k,psi,Tv);
     {
     Bdry(BDRY_WALLTFIXED1, INIT_TYPE2,Mx,My,P,T,w_O2,w_N2,w_default,k,psi,Tv);
@@ -369,18 +476,56 @@ Init(
     w_O2=0.235;
     w_N2=0.765;
     w_default=1e-30;
-    T=247;
-    {case 1}
-    Minf=23.9;
-    Re=1.95e4/Rin;
-    {case 3}
-    Minf=28.3;
-    Re=1.59e3/Rin;
-
+    
     All(INIT_TYPE3,Minf,0,Re,T,w_O2,w_N2,w_default);
+
     {
     Bdry(BDRY_WALLTFIXED1, INIT_TYPE2,Mx,My,P,T,w_O2,w_N2,w_default);
     Region(is,js,  ie,je, INIT_TYPE2,Mx,My,P,T,w_O2,w_N2,w_default);
+    }
+  );
+  NavierStokesPlasma(
+    {
+    _______________________________________________________________________________________
+
+    Initial Condition Type       Parameters
+    _______________________________________________________________________________________
+
+    INIT_TYPE1                   V[1]..V[nd],  T,  rho, w[1]..w[ns],     Tv, Te
+    INIT_TYPE2                   M[1]..M[nd],  P,  T,   w[1]..w[ns],     Tv, Te
+    INIT_TYPE3                   M[1]..M[nd],  Re, T,   w[1]..w[ns],     Tv, Te
+    INIT_TYPE4                   Mmag, angles, P,  T,   w[1]..w[ns],     Tv, Te
+    INIT_TYPE5                   V[1]..V[nd],  P,  T,   w[1]..w[ns],     Tv, Te
+    INIT_TYPE6                   V[1]..V[nd],  P,  T,   chi[1]..chi[ns], Tv, Te
+    _______________________________________________________________________________________
+
+    }
+    Species("O2","N2","default");
+    w_O2=0.235;
+    w_N2=0.765;
+    w_default=1e-30;
+    All(INIT_TYPE3,Minf,0,Re,T,w_O2,w_N2,w_default,Tv,Te);
+    {
+    Bdry(BDRY_WALLTFIXED1, INIT_TYPE6,Vx,Vy,P,T,chi_O2,chi_N2,chi_eminus,chi_default,Tv,Te);
+    Region(is,js,  ie,je, INIT_TYPE6,Vx,Vy,P,T,chi_O2,chi_N2,chi_eminus,chi_default,Tv,Te);
+    }
+  );
+  Epotential(
+    {
+    _______________________________________________________________________________________
+
+    EMField Initial Condition Type         Parameters
+    _______________________________________________________________________________________
+
+    INITEMF_TYPE1                          phi
+    _______________________________________________________________________________________
+
+    }
+    phi=0.0; {V}
+    All(INITEMF_TYPE1,phi);
+    {
+    Bdry(BDRYEMF_ELECTRODE, INITEMF_TYPE1,phi);
+    Region(is,js,  ie,je,INITEMF_TYPE1,phi);
     }
   );
 );
@@ -394,6 +539,30 @@ Disc(
   NavierStokes(
     zetaA1=0.3e0;    {conditions the eigenvalue of the A jacobian}
     zetaA2=0.1e0;     {conditions eigenvalues so they don't go out of bound; set to 0.1-0.5}
+  );
+  NavierStokesPlasma(
+    zetaA1=0.3e0;    {conditions the eigenvalue of the A jacobian}
+    zetaA2=0.1e0;     {conditions eigenvalues so they don't go out of bound; set to 0.1-0.5}
+    zetaD=1.0;        {conditions the Dstar eigenvalues for the charged species}
+    for (spec,1,numspec,
+      if (SPECIESTYPE[spec]==SPECIESTYPE_IONPLUS,
+        betag[spec]=1.0;
+        betaa[spec]=0.0;
+      );
+      if (SPECIESTYPE[spec]==SPECIESTYPE_IONMINUS,
+        betag[spec]=-0.01;
+        betaa[spec]=0.5;
+      );
+      if (SPECIESTYPE[spec]==SPECIESTYPE_ELECTRON,
+        betag[spec]=-0.00001;
+        betaa[spec]=0.99;
+      );
+    );
+  );
+  Epotential(
+    POTENTIAL=POTENTIAL_OHMBASED;
+    Ediv=10.0;        {a small positive number in V/m, needed to prevent a division by zero when
+                       discretizing the electron pressure gradients within the potential equation}
   );
   MUSCL(
     FLUX=FLUX_FDS;
@@ -442,8 +611,45 @@ Cycle(
     );
     Uref[numspec+numdim+1]=rhoref*aref*aref;
   );
+  NavierStokesPlasma(
+    xiverge=1e-3;         {residual convergence threshold}
+    zetaGammai=1.0;       {factor multiplying the pseudotime step of the ion species transport equations} 
+    zetaGammae=1.0;       {factor multiplying the pseudotime step of the electron species transport equations
+                           near cathode}
+    relaxNi_bdry=1.0;     {the ion density relaxation factor at the boundary }
+    relaxNe_bdry=0.2;     {the electron density relaxation factor at the boundary }
+    relaxTe=1.0;          {the electron temperature relaxation factor }
+    rhoref=1;           {reference density in kg/m3}
+    Tref=300.0;           {reference temperature in K}
+    Teref=20000.0;        {reference electron temperature in K}
+    Tvref=5000.0;         {reference vibrational temperature in K}
+    aref=sqrt(1.4*287*Tref);  {reference sound speed in m/s}
+    wion=1e-7;            {average ion mass fraction}
+    for (spec,1,numspec,
+      if (SPECIESTYPE[spec]==SPECIESTYPE_IONPLUS || SPECIESTYPE[spec]==SPECIESTYPE_IONMINUS,
+        Uref[spec]=wion*rhoref;
+      );
+      if (SPECIESTYPE[spec]==SPECIESTYPE_NEUTRAL,
+        Uref[spec]=rhoref;
+      );
+      if (SPECIESTYPE[spec]==SPECIESTYPE_ELECTRON,
+        Uref[spec]=wion*1.8e-5*rhoref;
+      );
+    );
+    for (dim,1,numdim,
+      Uref[numspec+dim]=rhoref*aref;
+    );
+    Uref[numspec+numdim+1]=rhoref*aref*aref;
+    Uref[numspec+numdim+2]=rhoref*700.0*Tvref;
+    Uref[numspec+numdim+3]=rhoref*wion*414*Teref;
+  );
+  Epotential(
+    xiverge_emfield=1e-2; {residual convergence threshold for the potential equation}
+    sigmaref=3e-6; {reference value for the conductivity in S/m -> used to determine the local time step of the potential equation}
+    Uref_emfield[1]=100.0e0; {reference value for the electric field potential in Volts -> used to determine xi}
+  );
   SteadyState(
-    if (mod(iter,50)==0,
+    if (mod(iter,500)==0,
       WriteDataFile(outputfilename);
     );
     sigma1=0.1;   {exponent of maximum pseudotime step in all dimensions}
@@ -457,6 +663,32 @@ Cycle(
            CFL,iter,effiter_U,ximax,i_ximax,
            j_ximax,clipinfo);
   );
+  SteadyStateNew(
+    if (mod(iter,50)==0,
+      WriteDataFile(outputfilename);
+    );
+    sigma1=0.0;   {exponent of maximum pseudotime step in all dimensions}
+    sigma2=0.0;   {exponent of maximum pseudotime step in all fluxes}
+    if (iter==1,
+      CFL=0.01;
+    );
+    if (iter<3000,
+      CFLmax=1.0;
+    ,{else}
+      CFLmax=2.0;
+    );
+    CFL=min(CFL*1.03,CFLmax);
+    UpdateFluid(CFL,PRECON_LOCALTIMESTEP,sigma1,sigma2);
+    Lc=1e99;      {characteristic length scale in meters used to solve the emfield equation}
+    relaxEMF=0.8; {relaxation factor forced on the update of the emfield variables}
+{  UpdateEMField(Lc,relaxEMF,TSEMF_IMAF,4); 
+    UpdateEMField(Lc,relaxEMF,TSEMF_SOR,300); }
+    UpdateEMField(Lc,relaxEMF,TSEMF_SOR,40); 
+    printf("%6.2f %6ld %9.3f   %E (%4ld,%4ld)  %E (%4ld,%4ld)  %s\n",
+           CFL,iter,effiter_U,ximax,i_ximax,
+           j_ximax,ximax_emfield,i_ximax_emfield,j_ximax_emfield,clipinfo);
+  );
+
 );
 
 
