@@ -719,7 +719,6 @@ static long _node_offset_from_cnt(long cnt){
 
 void find_metrics_on_all_nodes(np_t *np, gl_t *gl, zone_t zone){
   long i,j,k,TYPELEVEL,BDRYMETRICS;
-  zone_t newzone;
   long l_C,l_B,l_A,l,theta,thetasgn,dim;
 #ifdef _2DL
   long offset1,offset2,cnt1,cnt2;
